--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://andrewcua.github.io/Github-Search-Analytics/",
   "name": "github-search",
   "version": "0.1.0",
   "private": true,
